# hello-rust

./: .gitignore  Cargo.toml  CrossDockerfile  Dockerfile  README.md  build.rs  catalog-info.yaml  derivation.nix  flake.nix  justfile  skaffold.yaml
.cargo/: config.toml
.github/workflows/: issues.yml  rust.yml
etcd-api-protos/etcd/api/etcdserverpb/: raft_internal.proto  rpc.proto
etcd-api-protos/etcd/api/membershippb/: membership.proto
src/: aws.rs  cluster_management.rs  etcd.rs  lib.rs  main.rs  notion_api.rs  settings.rs  source_gcal.rs  source_notion.rs  tracing_utils.rs
src/tracing_utils/: trace_output_fmt.rs
terraform/: main.tf  outputs.tf  terraform.tf
tests/: google_oauth_test.rs
